[project]
name = "codeforces"
version = "0.1.1"
description = "A simple command line tool to move your competitive programming workflow to your terminal."
readme = "README.md"
license = "MIT"
authors = [{ name = "Nirlep5252" }]
keywords = ["codeforces", "competitive programming", "cli", "terminal"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "click>=7.0",
    "rich>=10.0",
    "requests>=2.20",
    "beautifulsoup4>=4.9",
    "websocket-client>=1.0",
    "undetected-chromedriver>=3.5.5",
]

[project.urls]
Homepage = "https://github.com/Nirlep5252/codeforces-cli"

[project.scripts]
cf = "cf:commands"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cf"]

[tool.hatch.build.targets.wheel.force-include]
"utils.py" = "utils.py"

[tool.hatch.build.targets.sdist]
include = ["cf/", "utils.py", "README.md"]
