[metadata]
name = codeforces
version = 0.0.8
url = https://github.com/Nirlep5252/codeforces-cli
author = Nirlep5252
description = A simple command line tool to move your competitive programming workflow to your terminal.
keyword = codeforces, competitive programming, cli, terminal
license = MIT
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = cf
python_requires = >=3.7
install_requires = 
    click
    rich
    requests
    beautifulsoup4
    websocket-client
py_modules = utils

[options.entry_points]
console_scripts = 
    cf = cf:commands
